# cg-project

./: .gitmodules  CMakeLists.txt  main.cpp
src/: Application.hpp  main.cpp
src/atlas/: TextureAtlas.hpp
src/chunks/: Chunk.hpp
src/renderers/: ChunkRenderer.hpp  NaiveRenderer.hpp  Renderer.hpp
